tests/baselines/reference/class1.errors.txt
tests/cases/compiler/class1.ts(1,11): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/class1.ts(2,7): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/class1.ts (2 errors) ====
    interface foo{ }
              ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    class foo{ }
          ~~~
!!! error TS2300: Duplicate identifier 'foo'.